# ariel-os

./: Cargo.toml  ariel-os-cargo.toml  compile_commands.json  laze-project.yml
.cargo/: config.toml
.github/workflows/: main.yml
examples/blinky/: laze.yml
examples/blinky/src/: pins.rs
playground/: Cargo.toml  laze.yml
playground/src/: main.rs  pins.rs
src/: laze.yml
src/ariel-os/: Cargo.toml
src/ariel-os-mpu/: Cargo.toml  laze.yml
src/ariel-os-mpu/src/: lib.rs
src/ariel-os-mpu/src/arch/: cortex_m.rs  cortexm.rs  mod.rs
src/ariel-os-rt/: Cargo.toml  build.rs
src/ariel-os-rt/src/: cortexm.rs  lib.rs  mpu.rs  threading.rs
src/ariel-os-threads/: Cargo.toml  laze.yml
src/ariel-os-threads/src/arch/: cortex_m.rs
src/ariel-os/src/: lib.rs
