[package]
name = "ariel-os-mpu"
version = "0.1.0"
license.workspace = true
edition.workspace = true
repository.workspace = true

[lints]
workspace = true

[dependencies]
bitflags.workspace = true
cfg-if.workspace = true
critical-section.workspace = true
linkme.workspace = true
ariel-os-alloc = { workspace = true, optional = true }
ariel-os-debug.workspace = true
ariel-os-utils = { workspace = true }

[target.'cfg(context = "cortex-m")'.dependencies]
cortex-m = { workspace = true }
cortex-mpu = { workspace = true }